--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@meforma/vue-toaster": "^1.3.0",
     "axios": "^1.2.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
